ovirt-host-deploy -- oVirt host deploy

????-??-?? - Version 1.1.0

 * fix vlan id detection, thanks to Jeff Bailey for reporting.

2013-02-14 - Version 1.0.0

Alon Bar-Lev <alonbl@redhat.com>

 * support vdsm hooks by copying hooks from engine machine to host or by
   specifying a list of packages to be installed at host, refer to README for
   farther information.

 * offline packager feature.

 * tuned is installed with virtual-host profile.

 * initial implementation based on otpoi.

 * implementation is based on legacy vdsm-bootstrap pacakge functionality.

 * legacy-removed: legacy VDSM (<3.0) config upgrade.

 * legacy-removed: change machine width core file
  # echo /var/lib/vdsm/core > /proc/sys/kernel/core_pattern

 * legacy-removed: kernel version test, package dependency is sufficient.

 * legacy-removed: do not add kernel parameter processor.max_cstate=1
   warn if not have constant_tsc
   https://bugzilla.redhat.com/show_bug.cgi?id=770153

 * legacy-removed: do not use mac address for vdsm id.

 * legacy-change: support for management bridge creation over bond.

 * legacy-change: use optional /etc/vdsm/vdsm.id for vdsm id, for use by
   >=vdsm-4.9.6.

 * legacy-change: logs are stored at /tmp/ovirt-host-deploy-*.log.

 * legacy-change: io elevator scheduler is using udev instead of using
   kernel command-line.

 * legacy-change: vdsm libvirt reconfigure
   vdsm is reconfigured with file based trigger in-addition to unsupported
   systemd init.d parameter. This will enable us to remove the non standard
   approach in future.

 * legacy-change: use yum api to install packages instead of yum utility.

 * legacy-change: distribution checks are simpler based on Python platform,
   minimum:
   - rhel-6.2
   - fedora-17

 * legacy-change: minimum vdsm version is taken from engine not hard coded.

 * legacy-change: pki is now using m2crypto to generate certificate request
   and parse certificates.
