@@ -3,6 +3,7 @@ ovirt-host-deploy -- oVirt host deploy
 ????-??-?? - Version 1.1.0
 
  * fix vlan id detection, thanks to Jeff Bailey for reporting.
+ * vdsm: hardware: do not fail if cannot read msr, rhbz#916589.
 
 2013-02-14 - Version 1.0.0
 
